// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-item-document-type should get multiple document types by ID 1`] = `
[
  {
    "description": null,
    "icon": "icon-document",
    "id": "00000000-0000-0000-0000-000000000000",
    "isElement": false,
    "name": "_Test Item DocumentType",
  },
  {
    "description": null,
    "icon": "icon-document",
    "id": "00000000-0000-0000-0000-000000000000",
    "isElement": false,
    "name": "_Test Item DocumentType2",
  },
]
`;

exports[`get-item-document-type should get no document types for empty request 1`] = `[]`;

exports[`get-item-document-type should get single document type by ID 1`] = `
[
  {
    "description": null,
    "icon": "icon-document",
    "id": "00000000-0000-0000-0000-000000000000",
    "isElement": false,
    "name": "_Test Item DocumentType",
  },
]
`;
